feat: html skeleton and css

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <h1>My Dashboard</h1>
+            </nav>
+        </header>
+        <div class="layout">
+            <aside>
+                <button class="sidebar-btn" id="create-project">Create Project</button>
+                <div class="projects-container" id="projects-container">
+                    <button class="project-btn">Project 1</button>
+                </div>
+            </aside>
+            <main class="content">
+                <button class="add-task">+ Add Task</button>
+                <div class="task-container">
+                    <div class="task">
+                        random ass task
+                    </div>
+                </div>
+            </main>
+        </div>
+    </body>
 </html>
