feat: add task button
the date form is not fixed yet it will be fixed later
as of now it just takes text as input

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
                 </div>
             </aside>
             <main class="content">
-                <button class="add-task">+ Add Task</button>
-                <div class="task-container">
+                <button class="add-task" id="add-task-btn">+ Add Task</button>
+                <div class="task-container" id="task-container">
                     <div class="task">
                         random ass task
                     </div>
