style: heading and added border-colors to :root

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <header>
+        <header class="heading">
             <nav>
                 <h1>My Dashboard</h1>
             </nav>
