style: button styling

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
         </header>
         <div class="layout">
             <aside>
-                <button class="sidebar-btn" id="create-project">Create Project</button>
+                <div class="projects-container create-project-container">
+                    <button class="sidebar-btn project-btn" id="create-project">Create Project</button>
+                </div>
                 <div class="projects-container" id="projects-container">
                     <button class="project-btn">Project 1</button>
                 </div>
