--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
             </nav>
         </header>
         <div class="layout">
-            <aside>
+            <aside class="sidebar">
                 <div class="projects-container create-project-container">
                     <button class="sidebar-btn project-btn" id="create-project">Create Project</button>
                 </div>
+                <h2 class="project-heading">Projects</h2>
                 <div class="projects-container" id="projects-container">
                     <button class="project-btn">Project 1</button>
                 </div>
