style: add-task-btn

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
             </aside>
             <main class="content">
-                <button class="add-task" id="add-task-btn">+ Add Task</button>
+                <div class="add-task-container"><button class="add-task project-btn" id="add-task-btn">+ Add Task</button></div>
                 <div class="task-container" id="task-container">
                     <div class="todo-card">
                         <div class="todo-header">
