--- a/src/index.html
+++ b/src/index.html
@@ -23,46 +23,11 @@
                 </div>
             </aside>
             <main class="content">
-                <div class="add-task-container"><button class="add-task project-btn" id="add-task-btn">+ Add Task</button></div>
-                <div class="task-container" id="task-container">
-                    <div class="todo-card">
-                        <div class="todo-header">
-                            <label style="display: flex; align-items: center; cursor: pointer; margin: 0; font-size: var(--font-size-base);">
-                                <input type="checkbox" class="todo-checkbox">
-                                <h2 class="todo-title">Complete project proposal</h2>
-                            </label>
-                            <span class="todo-priority high todo-priority-badge">high</span>
-                        </div>
-                        <p class="todo-description">Write the initial draft and gather feedback from the team before submission.</p>
-                        <div class="todo-due-date">
-                            <span class="date-icon">📅</span>
-                            Due: Dec 15, 2023
-                        </div>
-                        <div class="todo-actions">
-                            <button class="todo-button">Edit</button>
-                            <button class="todo-button danger">Delete</button>
-                        </div>
-                    </div>
-                    <div class="todo-card">
-                        <div class="todo-header">
-                            <label style="display: flex; align-items: center; cursor: pointer; margin: 0; font-size: var(--font-size-base);">
-                                <input type="checkbox" class="todo-checkbox">
-                                <h2 class="todo-title">Complete project proposal</h2>
-                            </label>
-                            <span class="todo-priority high todo-priority-badge">high</span>
-                        </div>
-                        <p class="todo-description">Write the initial draft and gather feedback from the team before submission.</p>
-                        <div class="todo-due-date">
-                            <span class="date-icon">📅</span>
-                            Due: Dec 15, 2023
-                        </div>
-                        <div class="todo-actions">
-                            <button class="todo-button">Edit</button>
-                            <button class="todo-button danger">Delete</button>
-                        </div>
-                    </div>
+                <div class="add-task-container">
+                    <button class="add-task project-btn" id="add-task-btn">+ Add Task</button>
                 </div>
-                
+                <div class="task-container" id="task-container">
+                </div>
             </main>
         </div>
     </body>
